# aoc-2025

./: .gitignore  Cargo.toml  README.md
aoc-framework/: Cargo.toml
aoc-framework/src/: error.rs  lib.rs  macros.rs  output.rs  solution.rs
aoc-framework/src/util/: parse.rs
solutions/: Cargo.toml
solutions/src/: day00.rs  day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  lib.rs  util.rs
solutions/src/util/: matrix.rs  parse.rs
src/: format.rs  main.rs
